Select Linked works not in touch with Prefs #36226

Closed
opened 2013-07-19 21:07:08 +02:00 by Moolah Nasreddin · 7 comments

%%%--- the distracted part :) ---

Congratulations with 2.68 release, Guys! :)
Blender is becoming more and more mature and I love it! Blender is becoming more likeable in Russia and this is great!
I wish it will grow in even more beautiful piece of art (it can't be called "software" in my mind).
I really hope that it will not "collect" all other 3d apps' weaknesses like clumsy UI and non-solid choices in the design.

- Operating System, Graphics card ---

win32

- Blender version with error, and version that worked ---

2.68 (did it worked before?)

- Short description of error ---

Select linked selects with "Limit by seams" ignoring Preferences anyway

- Steps for others to reproduce the error (preferably based on attached .blend file) ---
  • hit "L" on the seamed face of the cube

  • you'll see the greyed out Select Linked column. It contains two checkboxes: Deselect (unchecked), Limit by Seams (checked)

  • now check Preferences, enter "Select Linked" in the search and you'll find quickly:

    • "Limit by Seams" is set OFF by default (!!!)
    • "Deselect" choice in Prefs works like intended (so it sets the default value)
    • tries to set ON then OFF "Limit by Seams" in Prefs doesn't help

Seems that this bug is here for ages. Maybe now it's a good time to report it :) It's not crucial for me but is annoying

Also - another "bug" (it's very related to this case, I suppose frankly) is:

making once Ctrl+L and deselecting "Limit by Seams" doesn't change it's further behavior. As I know Blender "remembers" previous choices (in such cases)
by the design. So I call this "bug" - the unintended behavior, "not solid design".

P.S. before testing these I've loaded factory defaults.%%%

%%%--- the distracted part :) --- Congratulations with 2.68 release, Guys! :) Blender is becoming more and more mature and I love it! Blender is becoming more likeable in Russia and this is great! I wish it will grow in even more beautiful piece of art (it can't be called "software" in my mind). I really hope that it will not "collect" all other 3d apps' weaknesses like clumsy UI and non-solid choices in the design. - Operating System, Graphics card --- win32 - Blender version with error, and version that worked --- 2.68 (did it worked before?) - Short description of error --- Select linked selects with "Limit by seams" ignoring Preferences anyway - Steps for others to reproduce the error (preferably based on attached .blend file) --- - hit "L" on the seamed face of the cube - you'll see the greyed out Select Linked column. It contains two checkboxes: Deselect (unchecked), Limit by Seams (checked) - now check Preferences, enter "Select Linked" in the search and you'll find quickly: - "Limit by Seams" is set OFF by default (!!!) - "Deselect" choice in Prefs works like intended (so it sets the default value) - tries to set ON then OFF "Limit by Seams" in Prefs doesn't help Seems that this bug is here for ages. Maybe now it's a good time to report it :) It's not crucial for me but is annoying Also - another "bug" (it's very related to this case, I suppose frankly) is: making once Ctrl+L and deselecting "Limit by Seams" doesn't change it's further behavior. As I know Blender "remembers" previous choices (in such cases) by the design. So I call this "bug" - the unintended behavior, "not solid design". P.S. before testing these I've loaded factory defaults.%%%

Changed status to: 'Open'

Changed status to: 'Open'
Member

%%%This is caused by a special handling of the "limit" property of that operator (editmesh_selec.c, linked_limit_default, line 1882): If the property is "not set", a value will be picked automatically: for face-select mode enabled, otherwise disabled.

Problem is that, with the operator default being "off", the value will always be detected "not set" when "off" in user prefs. There is no way to explicitly disable it in user preferences because when "off" it will always chose automatically. Only when "on" in user settings will the automatic choice be skipped.%%%

%%%This is caused by a special handling of the "limit" property of that operator (editmesh_selec.c, linked_limit_default, line 1882): If the property is "not set", a value will be picked automatically: for face-select mode enabled, otherwise disabled. Problem is that, with the operator default being "off", the value will always be detected "not set" when "off" in user prefs. There is no way to explicitly disable it in user preferences because when "off" it will always chose automatically. Only when "on" in user settings will the automatic choice be skipped.%%%
Member

%%%I have put a potential patch on codereview:
https://codereview.appspot.com/13244048/

The way uninitialized keymap properties are displayed and the operator in the context menu are debatable, but i couldn't think of a more elegant way that doesn't clutter the whole user prefs with buttons for each property.%%%

%%%I have put a potential patch on codereview: https://codereview.appspot.com/13244048/ The way uninitialized keymap properties are displayed and the operator in the context menu are debatable, but i couldn't think of a more elegant way that doesn't clutter the whole user prefs with buttons for each property.%%%

%%%I'm not a coder but this sounds great! :)%%%

%%%I'm not a coder but this sounds great! :)%%%
Member

%%%Fixed in r60255. Keymaps will keep user-defined values now, until you explicitly "unset" them ('X' button user prefs). This prevents the operator from using automatic behavior with an "off" setting. Thanks for reporting!%%%

%%%Fixed in r60255. Keymaps will keep user-defined values now, until you explicitly "unset" them ('X' button user prefs). This prevents the operator from using automatic behavior with an "off" setting. Thanks for reporting!%%%
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

%%%Another great fix! :) Thank you!%%%

%%%Another great fix! :) Thank you!%%%
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#36226
No description provided.